--- a/RTC_UART.ioc
+++ b/RTC_UART.ioc
@@ -35,21 +35,22 @@ Mcu.Pin27=PA13
 Mcu.Pin28=PA14
 Mcu.Pin29=PC10
 Mcu.Pin3=PH0/OSC_IN
-Mcu.Pin30=PG11
-Mcu.Pin31=PG13
-Mcu.Pin32=PB3
-Mcu.Pin33=PB7
-Mcu.Pin34=VP_RTC_VS_RTC_Activate
-Mcu.Pin35=VP_RTC_VS_RTC_Calendar
-Mcu.Pin36=VP_RTC_VS_RTC_Alarm_A_Intern
-Mcu.Pin37=VP_SYS_VS_Systick
+Mcu.Pin30=PC11
+Mcu.Pin31=PG11
+Mcu.Pin32=PG13
+Mcu.Pin33=PB3
+Mcu.Pin34=PB7
+Mcu.Pin35=VP_RTC_VS_RTC_Activate
+Mcu.Pin36=VP_RTC_VS_RTC_Calendar
+Mcu.Pin37=VP_RTC_VS_RTC_Alarm_A_Intern
+Mcu.Pin38=VP_SYS_VS_Systick
 Mcu.Pin4=PH1/OSC_OUT
 Mcu.Pin5=PC1
 Mcu.Pin6=PA0/WKUP
 Mcu.Pin7=PA1
 Mcu.Pin8=PA2
 Mcu.Pin9=PA7
-Mcu.PinsNb=38
+Mcu.PinsNb=39
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F767ZITx
@@ -136,6 +137,8 @@ PC10.GPIOParameters=GPIO_PuPd
 PC10.GPIO_PuPd=GPIO_PULLUP
 PC10.Locked=true
 PC10.Signal=GPIO_Input
+PC11.Locked=true
+PC11.Signal=GPIO_Input
 PC13.GPIOParameters=GPIO_Label
 PC13.GPIO_Label=USER_Btn [B1]
 PC13.Locked=true
