--- a/RTC_UART.ioc
+++ b/RTC_UART.ioc
@@ -13,44 +13,46 @@ Mcu.Name=STM32F767ZITx
 Mcu.Package=LQFP144
 Mcu.Pin0=PC13
 Mcu.Pin1=PC14/OSC32_IN
-Mcu.Pin10=PC4
-Mcu.Pin11=PC5
-Mcu.Pin12=PB0
-Mcu.Pin13=PB1
-Mcu.Pin14=PB13
-Mcu.Pin15=PB14
-Mcu.Pin16=PD8
-Mcu.Pin17=PD9
-Mcu.Pin18=PG6
-Mcu.Pin19=PG7
+Mcu.Pin10=PA7
+Mcu.Pin11=PC4
+Mcu.Pin12=PC5
+Mcu.Pin13=PB0
+Mcu.Pin14=PB1
+Mcu.Pin15=PB13
+Mcu.Pin16=PB14
+Mcu.Pin17=PD8
+Mcu.Pin18=PD9
+Mcu.Pin19=PG6
 Mcu.Pin2=PC15/OSC32_OUT
-Mcu.Pin20=PC8
-Mcu.Pin21=PC9
-Mcu.Pin22=PA8
-Mcu.Pin23=PA9
-Mcu.Pin24=PA10
-Mcu.Pin25=PA11
-Mcu.Pin26=PA12
-Mcu.Pin27=PA13
-Mcu.Pin28=PA14
-Mcu.Pin29=PC10
+Mcu.Pin20=PG7
+Mcu.Pin21=PC8
+Mcu.Pin22=PC9
+Mcu.Pin23=PA8
+Mcu.Pin24=PA9
+Mcu.Pin25=PA10
+Mcu.Pin26=PA11
+Mcu.Pin27=PA12
+Mcu.Pin28=PA13
+Mcu.Pin29=PA14
 Mcu.Pin3=PH0/OSC_IN
-Mcu.Pin30=PC11
-Mcu.Pin31=PG11
-Mcu.Pin32=PG13
-Mcu.Pin33=PB3
-Mcu.Pin34=PB7
-Mcu.Pin35=VP_RTC_VS_RTC_Activate
-Mcu.Pin36=VP_RTC_VS_RTC_Calendar
-Mcu.Pin37=VP_RTC_VS_RTC_Alarm_A_Intern
-Mcu.Pin38=VP_SYS_VS_Systick
+Mcu.Pin30=PC10
+Mcu.Pin31=PC11
+Mcu.Pin32=PC12
+Mcu.Pin33=PG11
+Mcu.Pin34=PG13
+Mcu.Pin35=PB3
+Mcu.Pin36=PB7
+Mcu.Pin37=VP_RTC_VS_RTC_Activate
+Mcu.Pin38=VP_RTC_VS_RTC_Calendar
+Mcu.Pin39=VP_RTC_VS_RTC_Alarm_A_Intern
 Mcu.Pin4=PH1/OSC_OUT
+Mcu.Pin40=VP_SYS_VS_Systick
 Mcu.Pin5=PC1
 Mcu.Pin6=PA0/WKUP
 Mcu.Pin7=PA1
 Mcu.Pin8=PA2
-Mcu.Pin9=PA7
-Mcu.PinsNb=39
+Mcu.Pin9=PA3
+Mcu.PinsNb=41
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F767ZITx
@@ -58,12 +60,15 @@ MxCube.Version=5.3.0
 MxDb.Version=DB.5.0.30
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:true\:false
+NVIC.EXTI15_10_IRQn=true\:3\:0\:true\:false\:true\:true\:true
+NVIC.EXTI3_IRQn=true\:2\:0\:true\:false\:true\:true\:true
+NVIC.EXTI9_5_IRQn=true\:2\:1\:true\:false\:true\:true\:true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:true\:false
-NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
-NVIC.RTC_Alarm_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC.PriorityGroup=NVIC_PRIORITYGROUP_3
+NVIC.RTC_Alarm_IRQn=true\:0\:0\:true\:false\:true\:true\:true
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
@@ -97,6 +102,8 @@ PA2.GPIOParameters=GPIO_Label
 PA2.GPIO_Label=RMII_MDIO [LAN8742A-CZ-TR_MDIO]
 PA2.Locked=true
 PA2.Signal=ETH_MDIO
+PA3.Locked=true
+PA3.Signal=GPXTI3
 PA7.GPIOParameters=GPIO_Label
 PA7.GPIO_Label=RMII_CRS_DV [LAN8742A-CZ-TR_CRS_DV]
 PA7.Locked=true
@@ -133,12 +140,12 @@ PC1.GPIOParameters=GPIO_Label
 PC1.GPIO_Label=RMII_MDC [LAN8742A-CZ-TR_MDC]
 PC1.Locked=true
 PC1.Signal=ETH_MDC
-PC10.GPIOParameters=GPIO_PuPd
-PC10.GPIO_PuPd=GPIO_PULLUP
 PC10.Locked=true
 PC10.Signal=GPIO_Input
 PC11.Locked=true
 PC11.Signal=GPIO_Input
+PC12.Locked=true
+PC12.Signal=GPXTI12
 PC13.GPIOParameters=GPIO_Label
 PC13.GPIO_Label=USER_Btn [B1]
 PC13.Locked=true
@@ -157,14 +164,10 @@ PC5.GPIOParameters=GPIO_Label
 PC5.GPIO_Label=RMII_RXD1 [LAN8742A-CZ-TR_RXD1]
 PC5.Locked=true
 PC5.Signal=ETH_RXD1
-PC8.GPIOParameters=GPIO_PuPd
-PC8.GPIO_PuPd=GPIO_PULLUP
 PC8.Locked=true
-PC8.Signal=GPIO_Input
-PC9.GPIOParameters=GPIO_PuPd
-PC9.GPIO_PuPd=GPIO_PULLUP
+PC8.Signal=GPXTI8
 PC9.Locked=true
-PC9.Signal=GPIO_Input
+PC9.Signal=GPXTI9
 PCC.Checker=false
 PCC.Line=STM32F7x7
 PCC.MCU=STM32F767ZITx
@@ -332,8 +335,16 @@ RTC.Minutes_A-Alarm\ A=21
 RTC.Month=RTC_MONTH_AUGUST
 RTC.Seconds_A-Alarm\ A=30
 RTC.WeekDay=RTC_WEEKDAY_THURSDAY
+SH.GPXTI12.0=GPIO_EXTI12
+SH.GPXTI12.ConfNb=1
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
+SH.GPXTI3.0=GPIO_EXTI3
+SH.GPXTI3.ConfNb=1
+SH.GPXTI8.0=GPIO_EXTI8
+SH.GPXTI8.ConfNb=1
+SH.GPXTI9.0=GPIO_EXTI9
+SH.GPXTI9.ConfNb=1
 USART3.IPParameters=VirtualMode-Asynchronous
 USART3.VirtualMode-Asynchronous=VM_ASYNC
 VP_RTC_VS_RTC_Activate.Mode=RTC_Enabled
